OPHY-327: Prevent horizontal scrolling in hakemus listing

--- a/va-virkailija/web/va/hakemus-list/hakemus-listing.less
+++ b/va-virkailija/web/va/hakemus-list/hakemus-listing.less
@@ -41,12 +41,12 @@
 
 table.hakemus-list {
   .organization-column {
-    width: 300px;
-    max-width: 300px;
+    width: 280px;
+    max-width: 280px;
   }
   .project-name-column {
-    width: 456px;
-    max-width: 456px;
+    width: 390px;
+    max-width: 390px;
   }
   .organization-column,
   .project-name-column {
@@ -128,8 +128,8 @@ table.hakemus-list {
     white-space: nowrap;
   }
   &.hakemus-list--resolved .project-name-column {
-    width: 466px;
-    max-width: 466px;
+    width: 400px;
+    max-width: 400px;
   }
   &.hakemus-list--academysize {
     .project-name-column {
